Renated Web pack main package to com.slytechs.protocol.pack.web